--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",  
-    "start": "next start",
-    "lint": "eslint"
+  "build": "next build",
+  "start": "next start",
+  "lint": "eslint"
   },
   "dependencies": {
     "react": "19.1.0",
